# FinalProject-Backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  PROMPT_backend_new_repo.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_audit_append_only.py  0002_alarms_maintenance.py  0003_commands.py  0004_approvals_training.py
app/: __init__.py  main.py
app/core/: db.py  errors.py  permissions.py  redis.py  responses.py  security.py  settings.py  validation.py
app/domain/: alarms.py  approvals.py  audit.py  commands.py  devices.py  param_tuning.py  scenarios.py  servo_features.py  timeseries.py  training.py
app/events/: channels.py  deps.py  envelope.py  publisher.py
app/mock/: __init__.py  simulator.py
app/repositories/files/: engine_repo.py  model_registry_repo.py
app/repositories/http/: model_service.py
app/repositories/pg/: alarm_repo.py  approval_repo.py  audit_repo.py  base.py  command_repo.py  models.py  training_repo.py
app/routers/: authz.py  health.py
app/routers/engine/: control_mode.py  data_lifecycle.py  deps.py  ensemble.py  fallback.py  l1.py  l2.py  l3.py  models.py  residual.py  scenario_library.py  scenarios.py  shap.py
app/routers/governance/: alarms.py  approvals.py  audit.py  commands.py  maintenance.py  snapshot.py  system.py  training.py  trends.py
app/services/: alarm_service.py  approval_service.py  audit_service.py  command_service.py  integrations_service.py  maintenance_service.py  snapshot_service.py  training_service.py
docs/: DECISIONS.md  DEPLOYMENT.md  design-backend.md  design-frontend.md  後端資料規格書.md
scripts/: local_pg.ps1
tests/: conftest.py  test_alarms_domain.py  test_alarms_integration.py  test_approvals_domain.py  test_approvals_integration.py  test_audit_domain.py  test_audit_input_validation.py  test_audit_integration.py  test_authz.py  test_commands_domain.py  test_commands_integration.py  test_contract_schemathesis.py  test_engine_endpoints.py  test_engine_repo.py  test_events.py  test_health.py  test_model_service.py  test_param_tuning_domain.py  test_permissions.py  test_scenarios_domain.py  test_security.py  test_snapshot_trends.py  test_timeseries.py  test_training_domain.py
worker/: __init__.py  main.py  tasks.py
