[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-servo-backend"
version = "0.1.0"
description = "AI SERVO PLATFORM backend — governance + engine layers (single FastAPI app)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.3,<3.0",
    # Batch 2: governance persistence + audit worker.
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "asyncpg>=0.29,<1.0",
    "alembic>=1.13,<2.0",
    "redis>=5.0,<6.0",
    "arq>=0.26,<1.0",
    # Batch 8: outbound calls to the external model service.
    "httpx>=0.27,<1.0",
]

[project.optional-dependencies]
# Future batches add more dev tooling as needed.
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "httpx>=0.27,<1.0",
    # Pinned exactly: ruff is a build gate, not a runtime dep. A range let CI
    # install 0.16.0 the day it shipped, whose new markdown code-block
    # formatting failed the build on an untouched spec document. Bump this
    # deliberately, with the local venv, so CI and dev always agree.
    "ruff==0.16.0",
    "schemathesis>=3.33,<4.0",
    "fakeredis>=2.23,<3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app", "worker"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app", "tests"]
# ruff governs Python source only. From 0.16 it also formats code blocks inside
# markdown, which would rewrite the illustrative snippets in the spec documents
# under docs/ — those are the authoritative specs, not source we own.
extend-exclude = ["*.md"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
# B008: Depends()/Query() calls in argument defaults are the FastAPI idiom.
ignore = ["B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
